SAGE-1285: enforce rpcbind & nfs-server are shutdown _after_ this service
This ensures that the NFS files system is not removed before the RPi is
done using it.

--- a/ROOTFS/etc/systemd/system/waggle-agent-power.service
+++ b/ROOTFS/etc/systemd/system/waggle-agent-power.service
@@ -3,6 +3,9 @@ Description=Waggle Agent Power Service
 # Ensure we start before services that need local lan
 Wants=dnsmasq.service
 Before=dnsmasq.service
+# Ensure the NFS file system is still up when we attempt to shutdown the RPI
+Wants=rpcbind.service nfs-server.service
+After=rpcbind.service nfs-server.service
 
 [Service]
 Type=oneshot
